# service

./: .editorconfig  .envrc  .gitignore  .lintignore  BILLING.md  BUILD.bazel  Dockerfile  Gopkg.toml  Makefile  PLAYBOOK.md  README.md  RUNME  WORKSPACE  build.sh  circle.yml  connect  connect.go  connect.sh  connect_new.sh  connect_old  container  deploy.sh  docker-compose.yml  go.mod  go.sum  gomock.bzl  image-tag  kubectl.sh  kubectl_prod  local-install.md  main.go  push-images  push.sh  rolling-update  run.sh  spawn_local_k8s.sh  tag-and-push  up.sh
authfe/: .gitignore  BUILD.bazel  Dockerfile  admin.go  apiinfo.go  config.go  event.go  log_adapter.go  logger.go  logger_test.go  main.go  private.go  proxy.go  proxy_listener_router.go  proxy_test.go  routes.go  routes_test.go  routing_utils.go
authfe/balance/: address_endpoint.go  algo_consistent.go  consistent.go  consistent_test.go  log_adapter.go  round_robin.go  types.go
authfe/routing/: routing.go
billing-aggregator/: BUILD.bazel  Dockerfile  main.go
billing-aggregator/job/: BUILD.bazel  aggregate.go  aggregate_test.go
billing-api/: BUILD.bazel  Dockerfile  main.go  main_test.go
billing-api/api/: accounts.go
billing-api/db/: BUILD.bazel  db.go  memory.go  postgres.go  timed.go  traced.go
billing-api/docs/: README.md  creating-hosted-payment-page.md
billing-api/grpc/: common_test.go  server.go  server_integration_test.go  server_test.go
billing-api/render/: errors.go  json.go  template.go
billing-api/routes/: BUILD.bazel  accounts.go  accounts_test.go  admin.go  admin_test.go  api.go  billing_test.go  e2e_test.go  errors.go  invoice_verify.go  invoices.go  invoices_test.go  payments.go  routes.go  usage.go
billing-api/trial/: BUILD.bazel  trial.go  trial_test.go
billing-enforcer/: BUILD.bazel  Dockerfile  main.go  main_test.go
billing-enforcer/job/: BUILD.bazel  enforce.go
billing-uploader/: BUILD.bazel  Dockerfile  main.go  main_test.go
billing-uploader/job/: BUILD.bazel  invoice.go  usage.go  usage_test.go
common/: BUILD.bazel  flags.go  jsonclient.go  jsonclient_test.go  monitoring.go  prometheus_client.go  prometheus_mock.go  prometheus_mock_test.go  url.go
common/bigquery/: BUILD.bazel  client.go
common/collections/: BUILD.bazel  trie.go  trie_test.go
common/dbconfig/: config.go
common/dbwait/: BUILD.bazel  dbwait.go
common/errors/: errors.go
common/featureflag/: BUILD.bazel  enabler.go  flags.go  randomenabler.go  randomenabler_test.go  util.go
common/file/: lock.go
common/gcp/: BUILD.bazel  constants.go  jwt.go
common/grpc/: BUILD.bazel  client.go  errors.go  metrics.go
common/http/: http.go
common/instrument/: make_label_value.go  make_label_value_test.go  middleware.go
common/logging/: event.go
common/orgs/: BUILD.bazel  constants.go  data.go  team.go
common/permission/: list.go
common/permissions/: helpers.go  list.go
common/render/: BUILD.bazel  errors.go  errors_test.go  format.go  json_test.go
common/templates/: wrapper.html  wrapper.text
common/time/: BUILD.bazel  duration_test.go  time.go  time_test.go
common/tracing/: BUILD.bazel  jaeger.go  tracing.go
common/users/: BUILD.bazel  client.go  errors.go
common/users-client/: client.go
common/validation/: BUILD.bazel  validation.go  validation_test.go
common/zuora/: BUILD.bazel  accounts.go  accounts_test.go  config.go  errors.go  files.go  invoices.go  payments.go  payments_test.go  products.go  products_test.go  report.go  stripe.go  stripe_test.go  usage.go  zuora.go  zuora_test.go
flux-api/: BUILD.bazel  Dockerfile  main.go  main_test.go
flux-api/api/: BUILD.bazel  api.go
flux-api/bus/: BUILD.bazel  bus.go  metrics.go
flux-api/config/: BUILD.bazel  config.go  config_test.go
flux-api/db/: BUILD.bazel  db.go
flux-api/history/: BUILD.bazel  history.go  metrics.go
flux-api/http/: BUILD.bazel  routes.go  server.go  server_test.go  webhooks.go  webhooks_test.go
flux-api/instance/: BUILD.bazel  config.go  events.go  instance.go  metrics.go  mock.go  multi.go
flux-api/notifications/: BUILD.bazel  notifications.go  notifications_test.go  slack.go  slack_test.go
flux-api/server/: BUILD.bazel  billing.go  metrics.go  server.go
flux-api/service/: BUILD.bazel  service.go
gcp-launcher-webhook/: BUILD.bazel  Dockerfile  main.go
gcp-launcher-webhook/entitlement/: messagehandler.go  messagehandler_test.go
gcp-launcher-webhook/event/: event.go
gcp-launcher-webhook/handler/: BUILD.bazel  cancelledhandler.go  deletedhandler.go  eventhandler.go  noophandler.go  reactivatedhandler.go  suspendedhandler.go
gcp-launcher-webhook/subscription/: BUILD.bazel  messagehandler.go  messagehandler_test.go
gcp-service/: BUILD.bazel  Dockerfile  README.md  main.go
gcp-service/dao/: BUILD.bazel  users.go
github-receiver/: BUILD.bazel  Dockerfile  handler.go  main.go
kubectl-service/: BUILD.bazel  Dockerfile  integration_test.go  main.go
metrics/: .gitignore  BUILD.bazel  Dockerfile  main.go
notebooks/: BUILD.bazel  Dockerfile  notebook.go
notebooks/api/: api.go  (+4 more)
notification-configmanager/: BUILD.bazel  Dockerfile  README.md  api.md  configmanager.go  http_helpers.go
notification-eventmanager/: BUILD.bazel  Dockerfile  README.md  configmanagerclient.go  manager.go  manager_test.go
notification-sender/: BUILD.bazel  Dockerfile  browser.go  email.go  opsgenie.go  pagerduty.go  sender.go  slack.go  stackdriver.go
service-ui-kicker/: BUILD.bazel  Dockerfile  README.md  main.go
users/: BUILD.bazel  Dockerfile  Makefile  README.md  account_test.go  api_token.go  approval_test.go  auth.go  auth_test.go  delete_users_test.go  dep.go  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  email.go  emailer.go  errors.go  errors_test.go  filters.go  helpers_test.go  instrumentation.go  integration_test.go  invite_test.go  logging.go  login_test.go  lookup_test.go  main.go  memory_storage.go  org_test.go  organization.go  pg_storage.go  sessions.go  sessions_test.go  signup_test.go  storage.go  storage_test.go  summary_entry.go  team.go  templates.go  tokens.go  (+7 more)
(+1539 files in other folders)
