load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/weaveworks/service/billing-api",
    visibility = ["//visibility:private"],
    deps = [
        "//billing-api/db:go_default_library",
        "//billing-api/routes:go_default_library",
        "//common/users:go_default_library",
        "//common/zuora:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/weaveworks/common/logging:go_default_library",
        "//vendor/github.com/weaveworks/common/server:go_default_library",
    ],
)

go_binary(
    name = "billing-api",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["main_test.go"],
    deps = [
        ":go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
