load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/weaveworks/service/billing-enforcer",
    visibility = ["//visibility:private"],
    deps = [
        "//billing-enforcer/job:go_default_library",
        "//common/users:go_default_library",
        "//vendor/github.com/robfig/cron:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
        "//vendor/github.com/weaveworks/common/logging:go_default_library",
        "//vendor/github.com/weaveworks/common/server:go_default_library",
    ],
)

go_binary(
    name = "billing-enforcer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["main_test.go"],
    deps = [
        "//billing-enforcer/job:go_default_library",
        "//users:go_default_library",
        "//users/mock_users:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
    ],
)
