load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "flags.go",
        "jsonclient.go",
        "monitoring.go",
        "url.go",
    ],
    importpath = "github.com/weaveworks/service/common",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/weaveworks/common/http/client:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["jsonclient_test.go"],
    deps = [
        ":go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
