load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/weaveworks/service/metrics",
    visibility = ["//visibility:private"],
    deps = [
        "//common:go_default_library",
        "//users/db:go_default_library",
        "//users/db/filter:go_default_library",
        "//vendor/github.com/certifi/gocertifi:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
        "//vendor/github.com/weaveworks/common/logging:go_default_library",
    ],
)

go_binary(
    name = "metrics",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
