load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "users_proto",
    srcs = ["users.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/gogo/protobuf/gogoproto:gogoproto_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "users_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_grpc"],
    importpath = "github.com/weaveworks/service/users",
    proto = ":users_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/gogo/protobuf/gogoproto:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes/timestamp:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "dep.go",
        "errors.go",
        "organization.go",
        "user.go",
    ],
    embed = [":users_go_proto"],
    importpath = "github.com/weaveworks/service/users",
    visibility = ["//visibility:public"],
    deps = [
        "//users/tokens:go_default_library",
        "//vendor/github.com/gogo/protobuf/gogoproto:go_default_library",
        "//vendor/golang.org/x/crypto/bcrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "errors_test.go",
        "user_test.go",
    ],
    deps = [
        ":go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/golang.org/x/crypto/bcrypt:go_default_library",
    ],
)
