load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["aggregate.go"],
    importpath = "github.com/weaveworks/service/billing-aggregator/job",
    visibility = ["//visibility:public"],
    deps = [
        "//billing-api/db:go_default_library",
        "//common/bigquery:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
    ],
)
