load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "memory.go",
        "postgres.go",
        "timed.go",
        "traced.go",
    ],
    importpath = "github.com/weaveworks/service/billing-api/db",
    visibility = ["//visibility:public"],
    deps = [
        "//common/dbwait:go_default_library",
        "//vendor/github.com/Masterminds/squirrel:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
        "//vendor/gopkg.in/mattes/migrate.v1/driver/postgres:go_default_library",
        "//vendor/gopkg.in/mattes/migrate.v1/migrate:go_default_library",
    ],
)
