load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/weaveworks/service/common/bigquery",
    visibility = ["//visibility:public"],
    deps = [
        "//billing-api/db:go_default_library",
        "//common:go_default_library",
        "//vendor/cloud.google.com/go/bigquery:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
        "//vendor/google.golang.org/api/iterator:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
    ],
)
