load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "metrics.go",
    ],
    importpath = "github.com/weaveworks/service/common/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/metadata:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
    ],
)
