load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "duration.go",
        "time.go",
    ],
    importpath = "github.com/weaveworks/service/common/time",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["time_test.go"],
    embed = [":go_default_library"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["duration_test.go"],
    deps = [
        ":go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
